--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "autoprefixer": "^6.7.7",
     "axios": "^0.16.1",
+    "firebase": "^3.8.0",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
     "lodash.debounce": "^4.0.8",
