--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-modal": "^1.7.7",
     "react-native-fa-icons": "^2.0.2",
     "react-router": "^4.1.1",
+    "socket.io-client": "^2.0.1",
     "uuid": "^3.0.1"
   }
 }
